# net-server

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: app.yaml  lint.yaml
app/: __init__.py  main.py
scripts/: update_server.sh
tests/: test_app.py
